# Palabos-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  params.json
debian/: README.source  TODO  changelog  control  libpalabos-dev.lintian-overrides  libpalabos-dev.manpages  libpalabos-doc.doc-base  libpalabos-doc.docs  libpalabos.lintian-overrides  libpalabos.manpages  rules  watch
debian/manuals/: genmanpage.sh
debian/manuals/man_paraview/: pvbatch.1  pvblot.1  pvdataserver.1  pvrenderserver.1  pvserver.1
debian/manuals/man_paraview-dev/: kwProcessXML.1  smTestDriver.1  vtkWrapClientServer.1
debian/manuals/man_python/: pvpython.1
debian/manuals/others/: mTestDriver.1
debian/patches/: fix_manpages_errors.patch  series  use_system_json.patch
debian/scripts/: create_links.sh
examples/: CMakeLists.txt
examples/showCases/: CMakeLists.txt
examples/showCases/collidingBubbles2d/: twoBubbles.cpp
examples/showCases/externalFlowAroundObstacle2D/: CMakeLists.txt  externalFlowAroundObstacle.xml  externalFlowAroundObstacle2D.cpp
examples/showCases/externalFlowAroundObstacle3D/: CMakeLists.txt  externalFlowAroundObstacle.cpp
examples/tutorial/: CMakeLists.txt
examples/tutorial/tutorial_1/: CMakeLists.txt
examples/tutorial/tutorial_2/: CMakeLists.txt
include/: CMakeLists.txt  palabos2D.h
include/algorithm/: CMakeLists.txt
include/atomicBlock/: CMakeLists.txt  blockLattice2D.cuh  blockLattice2D.h  blockLattice2D.hh
include/basicDynamics/: CMakeLists.txt  dynamicsProcessor2D.hh
include/boundaryCondition/: CMakeLists.txt  generalizedCompressibleBoundaryTemplates.h
include/coProcessors/: CMakeLists.txt
include/core/: cell.cu  cell.h  cell.hh  plbCuda.h  plbCudaManagedMemory.h
include/multiBlock/: redistribution2D.h
include/multiPhysics/: freeSurfaceAnalysis2D.h  freeSurfaceAnalysis2D.hh  freeSurfaceInitializer2D.h  freeSurfaceUtil2D.h  freeSurfaceUtil3D.h  heLeeProcessor2D.hh  headers2D.h  headers2D.hh
include/offLattice/: boundaryShapes2D.hh  headers2D.hh  headers3D.hh  offLatticeBoundaryCondition2D.h  offLatticeBoundaryProcessor2D.hh  offLatticeModel2D.hh  triangleBoundary2D.h  triangleBoundary2D.hh  voxelizer3D.hh
src/: CMakeLists.txt  palabos2D.h  palabos2D.hh  palabos3D.h  palabos3D.hh
src/algorithm/: CMakeLists.txt
src/atomicBlock/: CMakeLists.txt  blockLattice2D.cu  blockLattice2D.cuh  blockLattice2D.hh  blockLattice3D.hh
src/basicDynamics/: dynamicsProcessor2D.hh  externalForceDynamics.hh
src/boundaryCondition/: generalizedBoundaryDynamics.hh  generalizedBoundaryDynamicsSolvers.h  generalizedBoundaryDynamicsSolvers.hh  generalizedIncompressibleBoundaryTemplates.h  headers2D.h  headers2D.hh  neumannCondition2D.h  neumannCondition2D.hh  neumannCondition3D.h  neumannCondition3D.hh  spongeZones2D.h  spongeZones2D.hh
src/complexDynamics/: CMakeLists.txt  mrtDynamics.hh
src/core/: CMakeLists.txt  dynamics.h  geometry2D.h  geometry3D.h  globalDefs.h  plbCuda.h  plbCudaManagedMemory.h
src/dataProcessors/: CMakeLists.txt
src/io/: CMakeLists.txt
src/latticeBoltzmann/: dynamicsTemplates.h  externalFieldAccess.h  geometricOperationTemplates.h  mrtLattices.hh  mrtTemplates2D.h
src/libraryInterfaces/: CMakeLists.txt  TINYXML_xmlIO.cpp  TINYXML_xmlIO.h
src/multiBlock/: CMakeLists.txt  serialMultiDataField2D.hh
src/multiGrid/: CMakeLists.txt  multiGridGenerator2D.h  multiGridParameterManager.hh
src/multiPhysics/: CMakeLists.txt  REVHelperFunctional2D.h  REVHelperFunctional2D.hh  REVHelperFunctional3D.h  REVHelperFunctional3D.hh  REVHelperWrapper2D.h  REVHelperWrapper2D.hh  REVHelperWrapper3D.h  REVHelperWrapper3D.hh  REVProcessor2D.h  REVProcessor2D.hh  REVProcessor3D.h  REVProcessor3D.hh  bubbleHistory2D.h  bubbleHistory2D.hh  bubbleMatch2D.cpp  bubbleMatch2D.h  bubbleMatch2D.hh  bubbleMatch3D.cpp  createBubbles2D.h  createBubbles2D.hh  freeSurfaceAnalysis2D.h  freeSurfaceAnalysis2D.hh  freeSurfaceBoundaryCondition2D.h  freeSurfaceBoundaryCondition2D.hh  freeSurfaceBoundaryCondition3D.h  freeSurfaceBoundaryCondition3D.hh  freeSurfaceInitializer2D.h  freeSurfaceInitializer2D.hh  freeSurfaceModel2D.h  freeSurfaceModel2D.hh  freeSurfaceModel3D.h  freeSurfaceModel3D.hh  freeSurfaceTemplates.h  freeSurfaceTemplates2D.h  freeSurfaceUtil.h  freeSurfaceUtil2D.h  freeSurfaceUtil3D.h  heLeeProcessor2D.h  heLeeProcessor2D.hh  (+14 more)
src/offLattice/: CMakeLists.txt  SegmentSet.h  boundaryShapes.h  boundaryShapes2D.h  boundaryShapes2D.hh  boundaryShapes3D.h  bouzidiOffLatticeModel2D.h  bouzidiOffLatticeModel2D.hh  filippovaHaenel2D.h  filippovaHaenel2D.hh  generalizedOffLatticeModel2D.h  generalizedOffLatticeModel2D.hh  generalizedOffLatticeModel3D.hh  guoAdvDiffOffLatticeModel2D.h  guoAdvDiffOffLatticeModel2D.hh  guoAdvDiffOffLatticeModel3D.h  guoAdvDiffOffLatticeModel3D.hh  guoOffLatticeModel2D.h  guoOffLatticeModel2D.hh  guoOffLatticeModel3D.hh  headers2D.h  headers2D.hh  headers3D.h  immersedWalls2D.h  immersedWalls2D.hh  nextNeighbors2D.h  nextNeighbors2D.hh  nextNeighbors3D.h  nextNeighbors3D.hh  offLatticeBoundaryCondition2D.h  offLatticeBoundaryCondition2D.hh  offLatticeBoundaryCondition3D.hh  offLatticeBoundaryProcessor2D.h  offLatticeBoundaryProcessor2D.hh  offLatticeBoundaryProcessor3D.hh  offLatticeBoundaryProfiles2D.h  offLatticeBoundaryProfiles2D.hh  offLatticeBoundaryProfiles3D.hh  offLatticeModel2D.h  offLatticeModel2D.hh  (+30 more)
src/parallelism/: CMakeLists.txt
src/particles/: headers2D.h  headers2D.hh  particleField2D.hh  particleProcessingFunctional2D.h  particleVtk2D.h  particleVtk2D.hh
