add_subdirectory(algorithm)
add_subdirectory(atomicBlock)
add_subdirectory(basicDynamics)
add_subdirectory(boundaryCondition)
add_subdirectory(coProcessors)
add_subdirectory(complexDynamics)
add_subdirectory(core)
add_subdirectory(dataProcessors)
add_subdirectory(finiteDifference)
add_subdirectory(io)
add_subdirectory(latticeBoltzmann)
add_subdirectory(libraryInterfaces)
add_subdirectory(multiBlock)
add_subdirectory(multiGrid)
add_subdirectory(multiPhysics)
add_subdirectory(offLattice)
add_subdirectory(parallelism)
add_subdirectory(particles)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/)
# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/externalLibraries/)