set(CORE_SRC
block2D.cpp
block3D.cpp
blockIdentifiers.cpp
blockStatistics.cpp
blockSurface2D.cpp
blockSurface3D.cpp
CMakeLists.txt
globalDefs.cpp
indexUtil.cpp
multiBlockIdentifiers2D.cpp
multiBlockIdentifiers3D.cpp
plbInit.cpp
plbLogFiles.cpp
plbProfiler.cpp
plbTimer.cpp
plbTypenames.cpp
processorIdentifiers2D.cpp
processorIdentifiers3D.cpp
runTimeDiagnostics.cpp
serializer.cpp
)
add_library(core SHARED ${CORE_SRC})
