set(MULTIBLOCK_SRC
multiBlock3D.cpp
multiBlockSerializer2D.cpp
nonLocalTransfer3D.cpp
sparseBlockStructure3D.cpp
combinedStatistics.cpp
multiBlockInfo2D.cpp
multiBlockSerializer3D.cpp
redistribution3D.cpp
staticRepartitions2D.cpp
domainManipulation2D.cpp
multiBlockInfo3D.cpp
multiContainerBlock2D.cpp
reductiveMultiDataProcessorWrapper2D.cpp
staticRepartitions3D.cpp
domainManipulation3D.cpp
multiBlockManagement2D.cpp
multiContainerBlock3D.cpp
reductiveMultiDataProcessorWrapper3D.cpp
threadAttribution.cpp
localMultiBlockInfo2D.cpp
multiBlockManagement3D.cpp
multiDataProcessorWrapper2D.cpp
serialBlockCommunicator2D.cpp
localMultiBlockInfo3D.cpp
multiBlockOperations2D.cpp
multiDataProcessorWrapper3D.cpp
serialBlockCommunicator3D.cpp
multiBlock2D.cpp
multiBlockOperations3D.cpp
nonLocalTransfer2D.cpp
sparseBlockStructure2D.cpp
)

add_library(multiBlock SHARED ${MULTIBLOCK_SRC})
